fixing blurrying svg on Safari

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -222,7 +222,7 @@ main {
     justify-content: center;
 }
 
-.zeppelin>img {
+.zeppelin>svg {
     width: 100%;
     height: 50%;
 }
@@ -277,7 +277,7 @@ main {
         grid-row: 6/9;
     }
 
-    .zeppelin>img {
+    .zeppelin>svg {
         height: 50%;
     }
 }
@@ -401,7 +401,7 @@ main {
         grid-row: 5/8;
     }
 
-    .zeppelin>img {
+    .zeppelin>svg {
         height: 60%;
     }
 
